--- a/K.UserRoles/K.UserRoles.csproj
+++ b/K.UserRoles/K.UserRoles.csproj
@@ -6,10 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="KDBAbstractions" Version="1.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Respositories\" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
